--- a/Results.html
+++ b/Results.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="assessment.css">
+    <title>Results</title>
+</head>
+
 # 診断結果
 - '{userName}のいいところは声です。{userName}の特徴的な声はみなを惹きつけ、心に残ります。',
 - '{userName}のいいところはまなざしです。{userName}に見つめられた人は、気になって仕方がないでしょう。',
